# csmipt4sem

lab1/: CMakeLists.txt  task1.cpp  task2.cpp
lab2/: CMakeLists.txt  README.md  task.cpp  whale.stl
lab3/: README.md  whale_heat.py
